[gd_scene load_steps=5 format=3 uid="uid://k7dnxbe1eico"]

[ext_resource type="Script" uid="uid://c62hoh0hl3wia" path="res://scenes/OverlayFrame.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ActionBar.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/StatusBar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://deawd8ubyi6gi" path="res://scenes/InfoBox.tscn" id="4"]

[node name="OverlayFrame" type="Control"]
custom_minimum_size = Vector2(420, 260)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 240)
layout_mode = 3
anchors_preset = 15
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ActionBar" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2")]

[node name="StatusBar" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3")]

[node name="InfoBox" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("4")]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
